{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 33,
  "lineage": "e129b275-1be9-b3c9-5240-fcbd30a9abc4",
  "resources": [
    {
      "module": "module.eks_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:716744502369:security-group/sg-0d89b8127b4f9e5ee",
            "description": "Security Group with all port open for everybody (IPv4 CIDR), egress ports are all port open",
            "egress": [],
            "id": "sg-0d89b8127b4f9e5ee",
            "ingress": [],
            "name": "eks-cluster-sg-20230904063426619800000006",
            "name_prefix": "eks-cluster-sg-",
            "owner_id": "716744502369",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-cluster-sg",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "eks-cluster-sg",
              "environment": "dev",
              "owners": "SAP"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-00f724c044f30b38d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-780212506",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d89b8127b4f9e5ee",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_sg.aws_security_group.this",
            "module.eks_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2060027141",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d89b8127b4f9e5ee",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_sg.aws_security_group.this",
            "module.eks_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05fc52700b6cedb79",
            "domain": "vpc",
            "id": "eipalloc-05fc52700b6cedb79",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-38-33-116.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.33.116",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SAP-terraform-eks-ap-northeast-2a",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-terraform-eks-ap-northeast-2a",
              "environment": "dev",
              "owners": "SAP"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e29ec0b39b554205",
            "domain": "vpc",
            "id": "eipalloc-0e29ec0b39b554205",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-202-141-214.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.141.214",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SAP-terraform-eks-ap-northeast-2c",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-terraform-eks-ap-northeast-2c",
              "environment": "dev",
              "owners": "SAP"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:716744502369:internet-gateway/igw-0952932d4a30d0ba9",
            "id": "igw-0952932d4a30d0ba9",
            "owner_id": "716744502369",
            "tags": {
              "Name": "SAP-terraform-eks",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-terraform-eks",
              "environment": "dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-00f724c044f30b38d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05fc52700b6cedb79",
            "connectivity_type": "public",
            "id": "nat-0b6839f311850589a",
            "network_interface_id": "eni-072f34efc6a90df19",
            "private_ip": "10.10.101.179",
            "public_ip": "3.38.33.116",
            "subnet_id": "subnet-0092387b558c2d4cd",
            "tags": {
              "Name": "SAP-terraform-eks-ap-northeast-2a",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-terraform-eks-ap-northeast-2a",
              "environment": "dev",
              "owners": "SAP"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e29ec0b39b554205",
            "connectivity_type": "public",
            "id": "nat-02812240c4d98a070",
            "network_interface_id": "eni-0524e8219b2c8b7fa",
            "private_ip": "10.10.102.201",
            "public_ip": "43.202.141.214",
            "subnet_id": "subnet-0c61bfe8bb8da6e25",
            "tags": {
              "Name": "SAP-terraform-eks-ap-northeast-2c",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-terraform-eks-ap-northeast-2c",
              "environment": "dev",
              "owners": "SAP"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e1546c363511b4f11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b6839f311850589a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e1546c363511b4f1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05c26066699b32ce11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02812240c4d98a070",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05c26066699b32ce1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0952932d4a30d0ba9",
            "id": "r-rtb-0bd7c19061a91246a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bd7c19061a91246a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:716744502369:route-table/rtb-0e1546c363511b4f1",
            "id": "rtb-0e1546c363511b4f1",
            "owner_id": "716744502369",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SAP-terraform-eks-private-ap-northeast-2a",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-terraform-eks-private-ap-northeast-2a",
              "environment": "dev",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f724c044f30b38d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:716744502369:route-table/rtb-05c26066699b32ce1",
            "id": "rtb-05c26066699b32ce1",
            "owner_id": "716744502369",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SAP-terraform-eks-private-ap-northeast-2c",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-terraform-eks-private-ap-northeast-2c",
              "environment": "dev",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f724c044f30b38d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:716744502369:route-table/rtb-0bd7c19061a91246a",
            "id": "rtb-0bd7c19061a91246a",
            "owner_id": "716744502369",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SAP-terraform-eks-public",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-terraform-eks-public",
              "environment": "dev",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f724c044f30b38d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0682e9223df2cb9af",
            "route_table_id": "rtb-0e1546c363511b4f1",
            "subnet_id": "subnet-04455309f203d84b3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3fa8f77a066e63c",
            "route_table_id": "rtb-05c26066699b32ce1",
            "subnet_id": "subnet-0f1e0ae665be6965e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6a3f736a6f44c10",
            "route_table_id": "rtb-0bd7c19061a91246a",
            "subnet_id": "subnet-0092387b558c2d4cd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084224487e27b4062",
            "route_table_id": "rtb-0bd7c19061a91246a",
            "subnet_id": "subnet-0c61bfe8bb8da6e25"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:716744502369:subnet/subnet-04455309f203d84b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04455309f203d84b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "716744502369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-terraform-eks-private-ap-northeast-2a",
              "Type": "private-subnets",
              "environment": "dev",
              "kubernetes.io/cluster/SAP-terraform-eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-terraform-eks-private-ap-northeast-2a",
              "Type": "private-subnets",
              "environment": "dev",
              "kubernetes.io/cluster/SAP-terraform-eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "SAP"
            },
            "vpc_id": "vpc-00f724c044f30b38d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:716744502369:subnet/subnet-0f1e0ae665be6965e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1e0ae665be6965e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "716744502369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-terraform-eks-private-ap-northeast-2c",
              "Type": "private-subnets",
              "environment": "dev",
              "kubernetes.io/cluster/SAP-terraform-eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-terraform-eks-private-ap-northeast-2c",
              "Type": "private-subnets",
              "environment": "dev",
              "kubernetes.io/cluster/SAP-terraform-eks": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "SAP"
            },
            "vpc_id": "vpc-00f724c044f30b38d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:716744502369:subnet/subnet-0092387b558c2d4cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0092387b558c2d4cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "716744502369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-terraform-eks-public-ap-northeast-2a",
              "Type": "Public Subnets",
              "environment": "dev",
              "kubernetes.io/cluster/SAP-terraform-eks": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-terraform-eks-public-ap-northeast-2a",
              "Type": "Public Subnets",
              "environment": "dev",
              "kubernetes.io/cluster/SAP-terraform-eks": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "SAP"
            },
            "vpc_id": "vpc-00f724c044f30b38d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:716744502369:subnet/subnet-0c61bfe8bb8da6e25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c61bfe8bb8da6e25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "716744502369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-terraform-eks-public-ap-northeast-2c",
              "Type": "Public Subnets",
              "environment": "dev",
              "kubernetes.io/cluster/SAP-terraform-eks": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-terraform-eks-public-ap-northeast-2c",
              "Type": "Public Subnets",
              "environment": "dev",
              "kubernetes.io/cluster/SAP-terraform-eks": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "SAP"
            },
            "vpc_id": "vpc-00f724c044f30b38d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:716744502369:vpc/vpc-00f724c044f30b38d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0caee077ef07654b3",
            "default_route_table_id": "rtb-06327e3295cf2e0d1",
            "default_security_group_id": "sg-054cd7ac6f40e093a",
            "dhcp_options_id": "dopt-077f7730d628de6dc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00f724c044f30b38d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06327e3295cf2e0d1",
            "owner_id": "716744502369",
            "tags": {
              "Name": "SAP-terraform-eks",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-terraform-eks",
              "environment": "dev",
              "owners": "SAP"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}